# sciplotlib

./: CLAUDE.md  Makefile  README.md  llms.txt  pyproject.toml  setup.py
module/: compose.py  drag_editor.py  layout.py  style.py  text.py
module/stylesheets/: mp-paper.mplstyle
notebooks/: preview_test.py
