[project]
name = "sciplotlib"
version = "0.0.8"
description = "Custom functions to improve the look of matplotlib plots for scientific visualisation."
authors = [
    { name = "Timothy Sit", email = "sitpakhang@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib",
    "numpy",
    "pyyaml",
]

[project.urls]
Homepage = "https://github.com/Timothysit/sciplotlib"

[project.optional-dependencies]
# GUI layout editor (make-layout command)
layout = [
    "rich",
    "ttkbootstrap",
    "typer",
]
# Marimo notebook support
notebooks = [
    "marimo>=0.9",
    "scipy",
]
# SVG panel rendering (requires system cairo)
svg = [
    "cairosvg",
]
# Everything for local development
dev = [
    "sciplotlib[layout,notebooks,svg]",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# sciplotlib/ is a symlink to module/ — setuptools follows it.
where = ["."]
include = ["sciplotlib*"]

[tool.setuptools.package-data]
sciplotlib = [
    "stylesheets/*.mplstyle",
    "*.pkl",
    "*.png",
]
